--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 	
-	<link rel="stylesheet" type="text/css" href="./To_Do_List/todo.css">
+	<link rel="stylesheet" type="text/css" href="To_Do_List/todo.css">
 
 </head>
 <body>
@@ -30,6 +30,6 @@
 		</div>
 	</div>
 </body>
-	<script type="text/javascript" src="./To_Do_List/todo.js"></script>
+	<script type="text/javascript" src="To_Do_List/todo.js"></script>
 </html>
 
